<resources>
    <string name="app_name">BertSpeak</string>
    <!-- SYstem-level variables -->
    <string name="appbar_scrolling_view_behavior">true</string>
    <!-- Labels in the navigation bar -->
    <string name="blank"> </string>
    <string name="tabDesc">The row of tabs below the app bar</string>

    <string name="fragmentAnimationLabel">Animation</string>
    <string name="fragmentCoverLabel">Cover</string>
    <string name="fragmentFacesLabel">FaceRec</string>
    <string name="fragmentLogsLabel">Logs</string>
    <string name="fragmentPosesLabel">Poses</string>
    <string name="fragmentSettingsLabel">Settings</string>
    <string name="fragmentStatusLabel">Status</string>
    <string name="fragmentTranscriptLabel">Transcript</string>

    <!-- Strings for Animation tab-->
    <string name="animationFrontTitle">Front</string>
    <string name="animationLeftTitle">Left</string>
    <string name="animationRightTitle">Right</string>
    <!-- Strings for Cover tab-->
    <string name="coverDescription">"Bert Reclining"</string>
    <string name="coverImageTitle">Bert</string>
    <string name="coverParameterSpeech">Speech</string>
    <string name="coverParameterNetwork">Network</string>
    <string name="coverParameterHearing">Hearing</string>
    <string name="coverSeekbarTitle">Vol</string>
    <string name="coverVoiceText">Voice Text</string>
    <string name="coverVoiceTextHint">Wait for robot connection ...</string>
    <string name="coverWaveformTitle">Voice Waveform</string>
    <!-- Strings for FaceRec tab-->
    <string name="facesCameraTitle">Front Camera</string>
    <string name="facesNameTitle">Known Faces</string>
    <!-- Strings for Poses tab -->
    <string name="posesTitle">Poses</string>
    <string name="posesDetailTitle">Detail</string>
    <string name="posesNameTitle">Name</string>


    <!-- Strings for Button Labels-->
    <string name="buttonAnalyze">Analyze</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonFreeze">Freeze</string>
    <string name="buttonLock">Lock</string>
    <string name="buttonOK">OK</string>
    <string name="buttonRefresh">Refresh</string>
    <string name="buttonSave">Save</string>
    <string name="buttonThaw">Unfreeze</string>
    <string name="buttonUnlock">Unlock</string>
    <!-- Notification Button Labels -->
    <string name="notificationLabel">Speech Processing via network connection to main robot.</string>
    <string name="notificationDescription">Generally spoken text processing is automatic and runs continuously. It can, however, be turned on and off via the buttons below </string>
    <string name="notificationKey">DispatchServiceRunning</string>

    <!-- DispatchService -->
    <string name="dispatchChannelID">DispatchServiceChannelID</string>
    <string name="dispatchChannelDesc">Channel for the messaging dispatch service</string>
    <string name="dispatchChannelName">Dispatch Service Channel</string>
    <string name="dispatchStartMessage">Starting Dispatch Service</string>
    <string name="dispatchStartIntent">inputExtra</string>
    <string name="notificationMute">Mute</string>
    <string name="notificationReset">Reset</string>
    <string name="notificationStop">Stop</string>
</resources>
