<!-- Show a camera preview with table of known faces -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentFaces"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border_white">

    <!-- Define a horizontal barrier between the views and buttons -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/facesHorizontalGuide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal"
        android:background="@color/black"
        app:layout_constraintGuide_percent="0.9"/>

    <!-- Define a vertical barrier between the 2 views -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/facesVerticalGuide"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        android:background="@color/black"
        app:layout_constraintGuide_percent="0.2"/>

    <TextView
        android:id="@+id/faces_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_gray"
        android:text="@string/facesNameTitle"
        android:textAlignment="center"
        android:textSize="@dimen/faces_list_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facesVerticalGuide"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- This is the list of names of known faces -->
    <ListView
        android:id="@+id/facesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facesVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/faces_name_title"
        app:layout_constraintBottom_toTopOf="@+id/facesHorizontalGuide"/>

    <!-- This is a live view of the camera -->
    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@+id/facesVerticalGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/facesHorizontalGuide"/>

    <!-- Button panel -->
    <LinearLayout
        android:id="@+id/facesButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintTop_toBottomOf="@+id/facesHorizontalGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/navigationBarColor"
        android:orientation="horizontal">
        <!-- Insert a greedy space between buttons -->
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/facesDeleteButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/buttonDelete" />
        <!-- find a face from the camera image -->
        <Button
            android:id="@+id/facesAnalyzeButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/buttonAnalyze" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
